--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
+APScheduler==3.6.3
+backports.zoneinfo==0.2.1
+cachetools==4.2.2
+certifi==2021.5.30
 distlib==0.3.4
 filelock==3.6.0
 platformdirs==2.5.1
+python-telegram-bot==13.6
+pytz==2021.1
+pytz-deprecation-shim==0.1.0.post0
 six==1.16.0
+tornado==6.1
+tzdata==2021.5
+tzlocal==2.1
 virtualenv==20.13.3
