--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,52 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
 APScheduler==3.6.3
+async-timeout==4.0.2
+attrs==21.4.0
+autobahn==22.2.2
+Automat==20.2.0
 backports.zoneinfo==0.2.1
+binance-connector==1.11.0
+binance-connector-python==0.6.0
 cachetools==4.2.2
 certifi==2021.5.30
+cffi==1.15.0
+charset-normalizer==2.0.12
+constantly==15.1.0
+cryptography==36.0.1
+dateparser==1.1.0
 distlib==0.3.4
+emoji==1.7.0
 filelock==3.6.0
+frozenlist==1.3.0
+hyperlink==21.0.0
+idna==3.3
+incremental==21.3.0
+multidict==6.0.2
 platformdirs==2.5.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pyOpenSSL==22.0.0
+python-binance==1.0.15
+python-dateutil==2.8.2
 python-telegram-bot==13.6
 pytz==2021.1
 pytz-deprecation-shim==0.1.0.post0
+regex==2022.3.2
+requests==2.27.1
+service-identity==21.1.0
 six==1.16.0
 tornado==6.1
+Twisted==22.2.0
+twisted-iocpsupport==1.0.2
+txaio==22.2.1
+typing_extensions==4.1.1
 tzdata==2021.5
 tzlocal==2.1
+ujson==5.1.0
+urllib3==1.26.8
 virtualenv==20.13.3
+websockets==9.1
+yarl==1.7.2
+zope.interface==5.4.0
