--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Automat==20.2.0
 backports.zoneinfo==0.2.1
 binance-connector==1.11.0
 binance-connector-python==0.6.0
+boto==2.49.0
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.15.0
