--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ boto==2.49.0
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.15.0
+chardet==3.0.4
 charset-normalizer==2.0.12
 constantly==15.1.0
 cryptography==36.0.1
@@ -20,8 +21,16 @@ distlib==0.3.4
 emoji==1.7.0
 filelock==3.6.0
 frozenlist==1.3.0
+googletrans==4.0.0rc1
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2021.12.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
 hyperlink==21.0.0
-idna==3.3
+idna==2.10
 incremental==21.3.0
 multidict==6.0.2
 platformdirs==2.5.1
@@ -36,8 +45,10 @@ pytz==2021.1
 pytz-deprecation-shim==0.1.0.post0
 regex==2022.3.2
 requests==2.27.1
+rfc3986==1.5.0
 service-identity==21.1.0
 six==1.16.0
+sniffio==1.2.0
 tornado==6.1
 Twisted==22.2.0
 txaio==22.2.1
