--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ attrs==21.4.0
 autobahn==22.2.2
 Automat==20.2.0
 backports.zoneinfo==0.2.1
+beautifulsoup4==4.10.0
 binance-connector==1.11.0
 binance-connector-python==0.6.0
 boto==2.49.0
@@ -17,6 +18,7 @@ charset-normalizer==2.0.12
 constantly==15.1.0
 cryptography==36.0.1
 dateparser==1.1.0
+deep-translator==1.8.0
 distlib==0.3.4
 emoji==1.7.0
 filelock==3.6.0
@@ -49,8 +51,10 @@ rfc3986==1.5.0
 service-identity==21.1.0
 six==1.16.0
 sniffio==1.2.0
+soupsieve==2.3.1
 tornado==6.1
 Twisted==22.2.0
+twisted-iocpsupport==1.0.2
 txaio==22.2.1
 typing_extensions==4.1.1
 tzdata==2021.5
